# opengl_command_executor

./: .gitignore  CMakeLists.txt  config.h  fixup_log.txt  state_swap.md  tjrelic-wx-capture-data-schema-v2.md
app/: guiReplayer.cpp
app/glStateManager/: CMakeLists.txt  GLStateManager.cpp  GLStateManager.h
app/glStateManager/glStateSnapshot/: BlendState.h  DepthStencilState.h  FramebufferState.h  GLStateSnapshot.h  PixelStorageState.h  RasterizerState.h  ResourceBindingState.h  ShaderState.h  VertexInputState.h
app/shaderJsonEditor/: main.js  package-lock.json  package.json  preload.js
app/shaderJsonEditor/renderer/: app.js  index.html  style.css
config/: config.in
docs/: 2026-06-17-reformed-capture-structure.md  2026-06-18-回放端配色与绕序修复.md  class_diagram.puml  claude_session.md  package_diagram.puml  sequence_diagram.puml  工作报告-回放端修复.md  逐命令重放器-GUI.md
docs/superpowers/plans/: 2026-06-16-gui-capture-picker.md  2026-06-17-shader-json-editor.md
docs/superpowers/specs/: 2026-06-17-shader-json-editor-design.md
example/20260611_161020_frame6/: commands.json  debug_log.json  manifest.json  programs.json  runtime_logs.json  shaders.json  state.json
example/20260611_161020_frame6/buffers/: Buffer#1.json  Buffer#10.json  Buffer#12.json  Buffer#13.json  Buffer#14.json  Buffer#15.json  Buffer#17.json  Buffer#18.json  Buffer#2.json  Buffer#20.json  Buffer#21.json  Buffer#22.json  Buffer#24.json  Buffer#25.json  Buffer#26.json  Buffer#27.json  Buffer#29.json  Buffer#3.json  Buffer#40.json  Buffer#41.json  Buffer#42.json  Buffer#44.json  Buffer#47.json  Buffer#48.json  Buffer#51.json  Buffer#54.json  Buffer#55.json  Buffer#57.json  Buffer#58.json  Buffer#59.json  Buffer#6.json  Buffer#60.json  Buffer#61.json  Buffer#68.json  Buffer#9.json
example/20260611_161020_frame6/textures/: Texture#8.json  Texture#9.json
example/20260615_110825_frame0/: commands.json  debug_log.json  manifest.json  programs.json  runtime_logs.json  shaders.json  state.json  vaos.json
example/20260615_110825_frame0/textures/: Screen.json
example/20260615_155046_frame0/: commands.json  debug_log.json  manifest.json  runtime_logs.json  state.json  vaos.json
example/20260615_155046_frame0/buffers/: Buffer#1.json  Buffer#2.json  Buffer#3.json  Buffer#4.json  Buffer#5.json  Buffer#6.json
example/new_structured_capture/: commands.json  debug_log.json  framebuffers.json  manifest.json  programs.json  runtime_logs.json  state.json  vaos.json
example/new_structured_capture/buffers/: Buffer#11.json  Buffer#16.json  Buffer#19.json  Buffer#23.json  Buffer#28.json  Buffer#30.json  Buffer#31.json  Buffer#32.json  Buffer#33.json  Buffer#34.json  Buffer#35.json  Buffer#36.json  Buffer#37.json  Buffer#38.json  Buffer#39.json  Buffer#4.json  Buffer#43.json  Buffer#45.json  Buffer#46.json  Buffer#49.json  Buffer#5.json  Buffer#50.json  Buffer#52.json  Buffer#53.json  Buffer#56.json  Buffer#62.json  Buffer#63.json  Buffer#64.json  Buffer#65.json  Buffer#66.json  Buffer#67.json  Buffer#69.json  Buffer#7.json  Buffer#8.json
example/new_structured_capture/textures/: Screen.json  Texture#1.json  Texture#10.json  Texture#11.json  Texture#12.json  Texture#2.json  Texture#3.json  Texture#4.json  Texture#5.json  Texture#6.json  Texture#7.json
libs/: glfw3.lib  glm.lib
scripts/: depth_bias.py
src/: config.h
src/core/: GladImplementation.cpp  Singleton.h
src/drawResources/: Buffer.h  CaptureTypes.h  Command.cpp  Command.h  Framebuffer.h  Manifest.h  Program.h  Shader.h  State.h  Texture.h  VertexArrayObject.h
src/framecapture/: CaptureLoader.cpp  CaptureLoader.h  FrameCapture.cpp  FrameCapture.h
src/mappers/: UniversalDMapper.h
src/platform/: NativeDialog.h  NativeDialog_win32.cpp
src/replayer/: ReplayEngine.cpp  ReplayEngine.h
src/resourceManagement/: ResourceAllocator.cpp  ResourceAllocator.h  ResourceManager.cpp  ResourceManager.h
src/shaderTranslation/: ShaderInterpreter.cpp  ShaderInterpreter.h
test/: testGLStateManager.cpp  testLoadCapture.cpp  testReplayCapture.cpp  testShaderTranslate.cpp
